<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/captura22"

    android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_monumentos"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/cuadrado"
        android:paddingStart="20dp"
        android:paddingLeft="200dp"
        android:paddingEnd="20dp"
        android:paddingRight="200dp"
        android:text="@string/bt_monumento"
        android:textColor="#ffffff"
        android:onClick="goToMonumentos"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/bt_galeria"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/cuadrado"
        android:paddingStart="20dp"
        android:paddingLeft="200dp"
        android:paddingEnd="20dp"
        android:paddingRight="200dp"
        android:text="@string/bt_galeria"
        android:textColor="#ffffff"
        android:onClick="goToGalerias"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_artistas" />

    <Button
        android:id="@+id/bt_plazas"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginStart="284dp"
        android:layout_marginLeft="284dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/cuadrado"
        android:paddingStart="20dp"
        android:paddingLeft="200dp"
        android:paddingEnd="20dp"
        android:paddingRight="200dp"
        android:onClick="goToPlazas"
        android:text="@string/bt_plazas"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_artistas"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/cuadrado"
        android:paddingStart="20dp"
        android:paddingLeft="200dp"
        android:paddingEnd="20dp"
        android:paddingRight="200dp"
        android:text="@string/bt_artistas"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_museos" />

    <Button
        android:id="@+id/button12"
        android:layout_width="380dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/cuadrado"
        android:paddingStart="20dp"
        android:paddingLeft="200dp"
        android:paddingEnd="20dp"
        android:paddingRight="200dp"
        android:text="@string/bt_parque"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_galeria" />

    <Button
        android:id="@+id/bt_museos"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/cuadrado"
        android:paddingStart="20dp"
        android:paddingLeft="200dp"
        android:paddingEnd="20dp"
        android:paddingRight="200dp"
        android:text="@string/bt_museo"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_plazas" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/txt_titulo2"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_monumentos" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_titulo4"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_monumentos" />

    <LinearLayout
        android:layout_width="441dp"
        android:layout_height="15dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/linearlayout"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_monumentos"></LinearLayout>

</android.support.constraint.ConstraintLayout>